[workspace]
members = [
  "kv_store",
  "kv_store/benchmarks"
]

[package]
name = "toydb"
version = "0.1.0"
authors = ["Gerard Abelló Serras <gerardabello@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv_store = { version = "0.1", path = "kv_store" }
