[package]
name = "kv_store"
version = "0.1.0"
authors = ["Gerard Abelló Serras <gerardabello@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

[[bench]]
name = "integration"
harness = false
